# django-knobs

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  zensical.toml
.github/workflows/: code-check.yml  docs.yml  release-docs.yml  release-pypi.yml
docs/: caching.md  quickstart.md  settings.md
docs/extensions/: history.md
example_app/: manage.py
example_app/example_app/: settings.py  urls.py
example_app/showcase/: apps.py  views.py
example_app/showcase/templates/showcase/: base.html  index.html  maintenance.html
src/knobs/: __init__.py  admin.py  apps.py  cache.py  conf.py  models.py  proxy.py  registry.py  serializers.py  signals.py  sync.py
src/knobs/contrib/history/: __init__.py  config.py  models.py
src/knobs/contrib/history/migrations/: 0001_initial.py
src/knobs/migrations/: 0001_knob_values_table.py
src/knobs/templates/admin/knobs/knobvalue/: knobs_form.html
tests/: conftest.py  test_cache.py  test_proxy.py  test_registry.py  test_sync.py
